# tecap

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
conda/: meta.yaml
docker/: Dockerfile
scripts/: render_mechanisms.py
src/tecap/: __init__.py  __main__.py  bam.py  basecomp.py  classify.py  cli.py  compare.py  constants.py  download.py  explain.py  gtf.py  io.py  multiqc.py  plotting.py  polya.py  report.py
tests/: conftest.py  test_bam.py  test_basecomp.py  test_classify.py  test_cli.py  test_constants.py  test_download.py  test_gtf.py  test_multiqc.py  test_polya.py  test_report.py
